[package]
name = "mi_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
num_cpus = "1.13.0"

mi_binary = { path = "../binary" }
# mi_binary = { git = "https://github.com/sirion/mi/" }
